--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,17 +5,25 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-	"crawl4ai",  # For web crawling functionality
-	"asyncio",   # For asynchronous operations
-	"aiohttp",   # Required for async HTTP requests (commonly used with crawl4ai)
-	"beautifulsoup4",  # For HTML parsing
-	"python-dotenv"   # For environment variable management
+    "crawl4ai",  # For web crawling functionality
+    "aiohttp",   # Required for async HTTP requests (commonly used with crawl4ai)
+    "beautifulsoup4",  # For HTML parsing
+    "python-dotenv"   # For environment variable management
 ]
 
-[project.optional-dependencies.dev]
-pytest = "*"
-pytest-asyncio = "*"
-black = "*"
-isort = "*"
-mypy = "*"
-pylint = "*"
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build]
+packages = ["src"]
+
+[project.optional-dependencies]
+dev = [
+    "pytest",
+    "pytest-asyncio",
+    "black",
+    "isort",
+    "mypy",
+    "pylint"
+]
